[package]
name = "kbot"
version = "0.1.0"
authors = ["dyon <dyon@dyonb.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

serenity = "0.9"
#serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = ["collector"] }
tokio = "0.2"
dotenv = "0.15.0"

reqwest = { version = "0.10", features = ["json"] }
urlencoding = "1.1"

mongodb = "1.1.1"
bson = "1.1.0"
serde = { version = "1.0.117", features = ["derive"] }
