[package]
name = "kbot"
version = "0.1.0"
authors = ["dyon <dyon@dyonb.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

tokio = { version = "1.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"

reqwest = { version = "0.11.0", features = ["json"] }
urlencoding = "1.1"

#mongodb = "1.1.1"
# Temporary workaround to get tokio 1.0 working
mongodb = { git = "https://github.com/rupansh/mongo-rust-driver" }
bson = "1.1.0"
serde = { version = "1.0.121", features = ["derive"] }

# Caching
dashmap = "4.0.2"

[dependencies.serenity]
version = "0.10.2"
features = ["collector"]
